Feat: nuevas ventanas modales para edit, ingreso y gastos

--- a/views/categoryEdit.ejs
+++ b/views/categoryEdit.ejs
@@ -21,7 +21,7 @@
         <div class="main_form">
             <div class="main_container">
                 
-                <div class="main_header entryForm_title">
+                <div class="main_header ">
                     <i class="fa-solid fa-bars"></i>
                     <p>MI BILLETERA</p> 
                     <i class="fa-solid fa-power-off"></i>             
@@ -41,12 +41,8 @@
                                     <option value="entry">Ingreso</option>
                                 </select>
                                 <button type="submit" class="editForm-btn-order-delete " id ="btn" >Aceptar</button>
-                            
-
-                                    <span></span>
                                 </div>
-                            
-                     
+
                         </div>
                         <a type="button" href ="/"class="see-more_btn" > &lt;&lt;Volver</a>
 
@@ -54,7 +50,7 @@
                 </div>
               
         </div>
-        <script src="/js/validations.js"></script>
+
         <script src="js/entryFormScript.js" ></script>
    </BODY>
 </HTML>
