--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,10 +33,34 @@
     }
 
     /* INDEX */
+    .body-wrapper{
+
+/* background-color: #78CFA3; */
+
+height: 100vh;
+
+display: flex;
+
+flex-direction: column;
+
+justify-content: space-between;
+
+}
     
-    .header{
-        display:none;
+    .header.hide.form{
+        display:block;
+        background-color: #41508e;
+        width: 100%;
+        height: 12vh;
+        line-height: 6vh;
+        text-align: center;
         color: white;
+        font-weight: b;
+    }
+    .header{
+     
+        display:none
+
     }
     .main{
         display: flex;
@@ -45,7 +69,10 @@
     }
     .main_form{
         display: flex;
-        height: 70vh;
+        height: max-content;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
     }
     .main_container{
         display:grid;
@@ -110,7 +137,7 @@
         border-radius: 10px;
         padding: 1em;
         margin: 7px;
-        height: 60vh;
+        height: 100%;
     }
     .index-btn button{
         background-color: white;
@@ -143,6 +170,8 @@
         border-radius: 3px;
         cursor: pointer;
         color: #817777;
+        background-color: white;
+        border: none;
     }
     .main_btn{
         display:flex;
@@ -239,7 +268,7 @@
         justify-content: space-between;
     }
     .entryForm_container select{
-        /* background-color: red; */
+        background-color: white;
         height: 2em;
         width: 100%;
         border: none;
@@ -262,7 +291,13 @@
         grid-area: 4/2;
     }
     .entryForm_mainContainer{
-        justify-self: center;
+        border: 1px solid #dac7c7;
+        width: 10;
+        border-radius: 10px;
+        background-color: #f1f1f1;
+        box-shadow: 9px 9px  5px#80808038;
+        margin-top: 9px;
+        height: 48vh;
     }
     .entryForm_title{
         display: flex;
@@ -304,15 +339,82 @@
     .main_widget-bar--desktop{
         display:none
     }
+    .main_widget-bar--desktop.edition{
+        display:block
+    }
     .main_search--desktop{
-
-        display:none;
+     display:none;
     }
     .main_header-widget--desktop{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: #4c5dbb;
+        color:white;
+        height: 4vh;
+        border-radius: 10px 10px 0px 0px;
+        border: 1px solid #d1d1d1;
+        width: 100%;
+    }
+    .main_header-widget--desktop button{
+        background-color: #4c5dbb00;
+        color:white;
+        font-weight: bold;
+        border: none;
+        position: relative;
+        left: 74%;
+    }
+    .main_body--desktop{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 1% 1%;
+
+    }
+    .modal {
+        position:fixed;
+        top:0;
+        left:0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #00000063;
+        opacity: 0;
+        pointer-events: none;
+    }
+    .modal.show{
+        opacity:100%;
+        pointer-events: auto;
+    }
+    .edition{
+        position:relative;
+        left: 9%;
+        top: 21%;
+        z-index: 2;
+        display: block;
+        width: 81%;
+    }
+    .hide{
         display:none
     }
+    .modal-widget {
+        position:fixed;
+        top: 0;
+        left:0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #00000063;
+        opacity: 0;
+        pointer-events: none;
+    }
+    .modal-widget.show{
+        opacity:100%;
+        pointer-events: auto;
+    }
+    .entryForm_mainContainer{
+        
+    }
     @media screen and (min-width: 600px){  
-        .header{
+        .header.hide{
             display:block;
             background-color: #41508e;
             width: 100%;
@@ -337,7 +439,8 @@
             display:flex;
             flex-direction: row;
             justify-content: space-evenly;
-            margin: 1% 0%;
+            margin: 1% 1%;
+            height: 80%;
         }
         .main_container-index{
             width: 100%;
@@ -442,6 +545,7 @@
         .search-bar--container select{
             width: 12em;
             height: 2em;
+            background-color: white;
         }
         .search-bar--input {
             border: 1px solid #e0d6d6;
@@ -482,4 +586,24 @@
             background-color: #41508e;
             color: white;
         }
+        .main_form{
+            /* border: 1px solid #dac7c7; */
+            width: 26%;
+            /* border-radius: 10px; */
+            /* background-color: #f1f1f1; */
+            /* box-shadow: 9px 9px  5px#80808038; */
+            /* margin-top: 0; */
+            align-self: flex;
+            margin-left: 38vw;
+        }
+        /* modal */
+        .entryForm_mainContainer.edition{
+            width: 28%;
+        }
+        .edition{
+            position:relative;
+            left: 32%;
+            top: 24%;
+        }
+
     } 
